--- a/basics_of_programming_course.vcxproj
+++ b/basics_of_programming_course.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="libs\data_structures\matrix\matrix.c" />
     <ClCompile Include="libs\data_structures\matrix\matrixD.c" />
     <ClCompile Include="libs\data_structures\matrix\tasks.c" />
+    <ClCompile Include="libs\data_structures\matrix\tasks_tests.c" />
     <ClCompile Include="libs\data_structures\matrix\tests.c" />
     <ClCompile Include="libs\data_structures\vector\tests.c" />
     <ClCompile Include="libs\data_structures\vector\vector.c" />
