--- a/basics_of_programming_course.vcxproj
+++ b/basics_of_programming_course.vcxproj
@@ -37,6 +37,7 @@
     <ClInclude Include="libs\data_structures\string\tasks\digitToEnd.h" />
     <ClInclude Include="libs\data_structures\string\tasks\removeExtraSpaces.h" />
     <ClInclude Include="libs\data_structures\string\tasks\removeNonLetters.h" />
+    <ClInclude Include="libs\data_structures\string\tasks\replaceDigitsToSpaces.h" />
     <ClInclude Include="libs\data_structures\vector\vector.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
