--- a/basics_of_programming_course.vcxproj.filters
+++ b/basics_of_programming_course.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClInclude Include="libs\data_structures\string\tasks\replaceDigitsToSpaces.h">
       <Filter>headers\libs\data_structures\string\tasks</Filter>
     </ClInclude>
+    <ClInclude Include="libs\data_structures\string\tasks\replace.h">
+      <Filter>headers\libs\data_structures\string\tasks</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="libs\data_structures\vector\vector.c">
