--- a/basics_of_programming_course.vcxproj
+++ b/basics_of_programming_course.vcxproj
@@ -35,6 +35,7 @@
     <ClInclude Include="libs\data_structures\string\string_.h" />
     <ClInclude Include="libs\data_structures\string\tasks\all_tasks.h" />
     <ClInclude Include="libs\data_structures\string\tasks\digitToEnd.h" />
+    <ClInclude Include="libs\data_structures\string\tasks\printReversedWords.h" />
     <ClInclude Include="libs\data_structures\string\tasks\isOrderedString.h" />
     <ClInclude Include="libs\data_structures\string\tasks\removeExtraSpaces.h" />
     <ClInclude Include="libs\data_structures\string\tasks\removeNonLetters.h" />
