--- a/basics_of_programming_course.vcxproj
+++ b/basics_of_programming_course.vcxproj
@@ -36,6 +36,7 @@
     <ClInclude Include="libs\data_structures\string\tasks\all_tasks.h" />
     <ClInclude Include="libs\data_structures\string\tasks\digitToEnd.h" />
     <ClInclude Include="libs\data_structures\string\tasks\getCountPalindrom.h" />
+    <ClInclude Include="libs\data_structures\string\tasks\getMergedString.h" />
     <ClInclude Include="libs\data_structures\string\tasks\printReversedWords.h" />
     <ClInclude Include="libs\data_structures\string\tasks\isOrderedString.h" />
     <ClInclude Include="libs\data_structures\string\tasks\removeExtraSpaces.h" />
