--- a/basics_of_programming_course.vcxproj
+++ b/basics_of_programming_course.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="libs\data_structures\string\string_.c" />
     <ClCompile Include="libs\data_structures\vector\tests.c" />
     <ClCompile Include="libs\data_structures\vector\vector.c" />
+    <ClCompile Include="sorts\sorts.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="libs\data_structures\matrix\matrix.h" />
@@ -51,6 +52,7 @@
     <ClInclude Include="libs\data_structures\string\tasks\replace.h" />
     <ClInclude Include="libs\data_structures\string\tasks\replaceDigitsToSpaces.h" />
     <ClInclude Include="libs\data_structures\vector\vector.h" />
+    <ClInclude Include="sorts\sorts.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -122,6 +124,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard_C>stdc11</LanguageStandard_C>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -164,6 +167,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard_C>Default</LanguageStandard_C>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
