--- a/basics_of_programming_course.vcxproj.filters
+++ b/basics_of_programming_course.vcxproj.filters
@@ -42,6 +42,12 @@
     <Filter Include="headers\libs\data_structures\string\tasks">
       <UniqueIdentifier>{084ad15a-44ca-40c5-a867-e8fc8426c918}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sources\libs\sorts">
+      <UniqueIdentifier>{c9e4cc8f-63fd-4d25-8fbc-7d16da2eff1e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="headers\libs\sorts">
+      <UniqueIdentifier>{c4adf0a3-3e36-4c6f-b1f9-d572d008f9dc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="libs\data_structures\vector\vector.h">
@@ -107,6 +113,9 @@
     <ClInclude Include="libs\data_structures\string\tasks\alltests.h">
       <Filter>headers\libs\data_structures\string\tasks</Filter>
     </ClInclude>
+    <ClInclude Include="sorts\sorts.h">
+      <Filter>headers\libs\sorts</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="libs\data_structures\vector\vector.c">
@@ -135,6 +144,9 @@
     </ClCompile>
     <ClCompile Include="libs\data_structures\string\string_.c">
       <Filter>sources\libs\data_structures\string</Filter>
+    </ClCompile>
+    <ClCompile Include="sorts\sorts.c">
+      <Filter>sources\libs\sorts</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
